--- a/2_question_analyze_and_creater.ipynb
+++ b/2_question_analyze_and_creater.ipynb
@@ -79,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 88,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-24T15:29:14.306480Z",
-     "start_time": "2020-05-24T15:29:13.574409Z"
+     "end_time": "2020-05-24T15:53:01.442402Z",
+     "start_time": "2020-05-24T15:53:00.790735Z"
     }
    },
    "outputs": [],
@@ -108,9 +108,9 @@
     "        question_txt = question_txt + '<img src = \"'\n",
     "        question_txt = question_txt + group_data[ column_name ].values[i]\n",
     "        if column_name == 'stem_img1_src' or column_name == 'stem_img2_src':\n",
-    "            question_txt = question_txt + '\" height=\"100\" align=\"right\">'\n",
+    "            question_txt = question_txt + '\" height=\"200\" align=\"right\">'\n",
     "        else:\n",
-    "            question_txt = question_txt + '\" height=\"100\"  >'\n",
+    "            question_txt = question_txt + '\" height=\"200\"  >'\n",
     "\n",
     "with open('題庫.html', 'w', encoding='utf-8' ) as myFile:\n",
     "    myFile.write('<html>')\n",
@@ -183,6 +183,10 @@
     "            question_txt = question_txt + group_data['選項D'].values[i]\n",
     "            add_img_src('d_img_src')\n",
     "            question_txt = question_txt + '&emsp;'\n",
+    "            \n",
+    "            question_txt = question_txt + '<p>'\n",
+    "            question_txt = question_txt + '<p>'\n",
+    "            question_txt = question_txt + '<p>'\n",
     "\n",
     "            question_txt = question_txt + '<hr>'\n",
     "            \n",
