--- a/2_question_analyze_and_creater.ipynb
+++ b/2_question_analyze_and_creater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-24T15:19:03.873379Z",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-24T15:19:04.812413Z",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-24T15:53:01.442402Z",
@@ -100,7 +100,6 @@
     "data.index.is_lexsorted()\n",
     "\n",
     "\n",
-    "\n",
     "#對題幹的圖和選項的圖分別處理\n",
     "def add_img_src(column_name):\n",
     "    if len(group_data[ column_name ].values[i] ) > 0:\n",
@@ -108,9 +107,9 @@
     "        question_txt = question_txt + '<img src = \"'\n",
     "        question_txt = question_txt + group_data[ column_name ].values[i]\n",
     "        if column_name == 'stem_img1_src' or column_name == 'stem_img2_src':\n",
-    "            question_txt = question_txt + '\" height=\"200\" align=\"right\">'\n",
+    "            question_txt = question_txt + '\" height=\"100\" align=\"right\">'\n",
     "        else:\n",
-    "            question_txt = question_txt + '\" height=\"200\"  >'\n",
+    "            question_txt = question_txt + '\" height=\"100\"  >'\n",
     "\n",
     "with open('題庫.html', 'w', encoding='utf-8' ) as myFile:\n",
     "    myFile.write('<html>')\n",
@@ -122,25 +121,36 @@
     "        \n",
     "    myFile.write('<body>')\n",
     "\n",
+    "    #目錄文字\n",
+    "    category_txt = '<h3>目錄</h3>'\n",
     "    \n",
     "    for k in range(len(data.index.unique())):\n",
     "        sector =  data.index.unique()[k]\n",
     "\n",
     "        question_txt = '<hr>'        \n",
-    "        question_txt = question_txt + '<H1>'\n",
-    "        question_txt = question_txt + sector[0] + '-' + sector[1] + '：' + sector[2] \n",
-    "        question_txt = question_txt + '</H1>'\n",
+    "        question_txt = question_txt + '<H3>'\n",
+    "        question_txt = question_txt + '【' + str(k + 1) + '】&emsp;' + sector[0] + '-' + sector[1] + '：' + sector[2] \n",
     "        \n",
     "        \n",
-    "        group_data = data.loc[sector[0] , sector[1] , sector[2]].sort_values(by=['出處'], ascending = False)\n",
-    "        question_txt = question_txt + '共' + str(len(group_data )) + '題'\n",
+    "        \n",
+    "        group_data = data.loc[sector[0] , sector[1] , sector[2]].sort_values(by=['出處'],ascending=False)\n",
+    "        question_txt = question_txt + '(共' + str(len(group_data )) + '題)'\n",
+    "        question_txt = question_txt + '</H3>'\n",
     "        \n",
     "        question_txt = question_txt + '<hr>'\n",
     "\n",
     "        \n",
+    "        category_txt = category_txt + '<br>' + '【' + str(k + 1) + '】&emsp;' + sector[0] + '-' + sector[1] + '：' + sector[2] \n",
+    "        category_txt = category_txt + '(' + str(len(group_data )) + ')'\n",
+    "\n",
+    "        \n",
+    "        \n",
     "        idx = 1  #題號\n",
     "        \n",
     "        myFile.write(question_txt)\n",
+    "\n",
+    "        \n",
+    "        answer_txt = '<hr>答案：'\n",
     "        \n",
     "        for i in range ( len(group_data ) ):\n",
     "\n",
@@ -149,7 +159,7 @@
     "            add_img_src('stem_img1_src')\n",
     "            add_img_src('stem_img2_src')\n",
     "            \n",
-    "            question_txt = question_txt + str(idx) + '.(&emsp;' + group_data['答案'].values[i]  + '&emsp;)'\n",
+    "            question_txt = question_txt + '(&emsp;&emsp;)' + str(idx) + '.'\n",
     "            question_txt = question_txt + group_data['題幹'].values[i]\n",
     "\n",
     "            question_txt = question_txt + '【'        \n",
@@ -163,39 +173,54 @@
     "            add_img_src('a_img_src')\n",
     "            question_txt = question_txt + '&emsp;'\n",
     "\n",
-    "            question_txt = question_txt + '<br>'\n",
+    "            #question_txt = question_txt + '<br>'\n",
     "            question_txt = question_txt + '&emsp;'\n",
     "            question_txt = question_txt + '(B)'\n",
     "            question_txt = question_txt + group_data['選項B'].values[i]\n",
     "            add_img_src('b_img_src')\n",
     "            question_txt = question_txt + '&emsp;'\n",
     "\n",
-    "            question_txt = question_txt + '<br>'\n",
+    "            #question_txt = question_txt + '<br>'\n",
     "            question_txt = question_txt + '&emsp;'\n",
     "            question_txt = question_txt + '(C)'    \n",
     "            question_txt = question_txt + group_data['選項C'].values[i]\n",
     "            add_img_src('c_img_src')\n",
     "            question_txt = question_txt + '&emsp;'\n",
     "\n",
-    "            question_txt = question_txt + '<br>'\n",
+    "            #question_txt = question_txt + '<br>'\n",
     "            question_txt = question_txt + '&emsp;'\n",
     "            question_txt = question_txt + '(D)'    \n",
     "            question_txt = question_txt + group_data['選項D'].values[i]\n",
     "            add_img_src('d_img_src')\n",
     "            question_txt = question_txt + '&emsp;'\n",
-    "            \n",
-    "            question_txt = question_txt + '<p>'\n",
-    "            question_txt = question_txt + '<p>'\n",
-    "            question_txt = question_txt + '<p>'\n",
     "\n",
-    "            question_txt = question_txt + '<hr>'\n",
+    "            #question_txt = question_txt + '<hr>'\n",
     "            \n",
     "            myFile.write(question_txt)\n",
     "            \n",
+    "            #收集每一題的答案\n",
+    "            answer_txt = answer_txt + group_data['答案'].values[i]\n",
+    "            #answer_txt = answer_txt + ','\n",
+    "            if i % 5 == 4 :\n",
+    "                answer_txt = answer_txt + '&nbsp &nbsp'\n",
     "            idx = idx + 1\n",
-    "\n",
-    "    \n",
-    "    \n",
+    "        \n",
+    "        #增加答案\n",
+    "        myFile.write(answer_txt)\n",
+    "        \n",
+    "        #增加筆記區\n",
+    "        note_txt = '<H4> 重點 </H4>'\n",
+    "        #note_txt = note_txt +'<table style=\"border:1px #000000 dashed;1px\"  rules=\"all\" cellpadding=\"10\" border=\"1\" width=\"100%\"> '\n",
+    "        #note_txt = note_txt + '<tr height = \"100px\"> <td> &nbsp </td> </tr>'\n",
+    "        #note_txt = note_txt + '</table>'\n",
+    "        myFile.write(note_txt)\n",
+    "        \n",
+    "        #強迫分頁\n",
+    "        pagebreak_txt = '<p style=\"page-break-after:always\"></p>'\n",
+    "        myFile.write(pagebreak_txt)\n",
+    "        \n",
+    "        \n",
+    "    myFile.write(category_txt)\n",
     "    myFile.write('</body>')\n",
     "   \n",
     "    myFile.write('</html>')"
@@ -210,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-24T15:38:47.794858Z",
@@ -238,7 +263,8 @@
     "with open('統計.html', 'w', encoding = 'utf-8') as file:\n",
     "    file.write(result_1)\n",
     "    file.write('<hr>')\n",
-    "\n",
+    "    pagebreak_txt = '<p style=\"page-break-after:always\"></p>'\n",
+    "    file.write(pagebreak_txt)\n",
     "    file.write(result_2)\n",
     "    file.write('<hr>')\n"
    ]
