update fig and text

--- a/2_question_analyze_and_creater.ipynb
+++ b/2_question_analyze_and_creater.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-24T15:19:03.873379Z",
-     "start_time": "2020-05-24T15:19:03.842270Z"
+     "end_time": "2020-08-18T02:15:00.810923Z",
+     "start_time": "2020-08-18T02:15:00.778874Z"
     }
    },
    "outputs": [],
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-24T15:19:04.812413Z",
-     "start_time": "2020-05-24T15:19:04.640186Z"
+     "end_time": "2020-08-18T02:15:01.362148Z",
+     "start_time": "2020-08-18T02:15:01.190969Z"
     }
    },
    "outputs": [],
@@ -74,16 +74,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 匯出統計資料"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-18T02:15:01.733489Z",
+     "start_time": "2020-08-18T02:15:01.624645Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#按照出處，並遞減排序\n",
+    "result_1 = df.pivot_table(index = '出處', \n",
+    "                       columns = '章',\n",
+    "                       values = '題幹',\n",
+    "                       aggfunc = 'count', \n",
+    "                       fill_value = 0,\n",
+    "                       margins = True,\n",
+    "                       margins_name = '小計',\n",
+    "                       ).sort_index(axis= 0, ascending = False).to_html()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#result_2 = df['概念'].groupby(df['章']).value_counts().to_frame().to_html()\n",
+    "result_2 = df['節'].groupby(df['章']).value_counts().to_frame().to_html()\n",
+    "\n",
+    "\n",
+    "with open('統計.html', 'w', encoding = 'utf-8') as file:\n",
+    "    file.write(result_1)\n",
+    "    file.write('<hr>')\n",
+    "    pagebreak_txt = '<p style=\"page-break-after:always\"></p>'\n",
+    "    file.write(pagebreak_txt)\n",
+    "    file.write(result_2)\n",
+    "    file.write('<hr>')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 匯出題庫的HTML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-24T15:53:01.442402Z",
-     "start_time": "2020-05-24T15:53:00.790735Z"
+     "end_time": "2020-08-18T02:15:03.850945Z",
+     "start_time": "2020-08-18T02:15:03.130219Z"
     }
    },
    "outputs": [],
@@ -107,8 +151,11 @@
     "        question_txt = question_txt + '<img src = \"'\n",
     "        question_txt = question_txt + group_data[ column_name ].values[i]\n",
     "        if column_name == 'stem_img1_src' or column_name == 'stem_img2_src':\n",
+    "            #question_txt = question_txt + '\" align=\"right\">'\n",
     "            question_txt = question_txt + '\" height=\"100\" align=\"right\">'\n",
+    "            \n",
     "        else:\n",
+    "            #question_txt = question_txt + '\"   >'\n",
     "            question_txt = question_txt + '\" height=\"100\"  >'\n",
     "\n",
     "with open('題庫.html', 'w', encoding='utf-8' ) as myFile:\n",
@@ -121,9 +168,19 @@
     "        \n",
     "    myFile.write('<body>')\n",
     "\n",
-    "    #目錄文字\n",
-    "    category_txt = '<h3>目錄</h3>'\n",
+    "    #寫入統計資料。result_1和result_2來自上格\n",
+    "    myFile.write(result_1)\n",
+    "    myFile.write('<hr>')\n",
+    "    pagebreak_txt = '<p style=\"page-break-after:always\"></p>'\n",
+    "    myFile.write(pagebreak_txt)\n",
+    "    myFile.write(result_2)\n",
+    "    myFile.write('<hr>')    \n",
     "    \n",
+    "    \n",
+    "    #目錄文字\n",
+    "    category_txt = '<h3>小計</h3>'\n",
+    "    \n",
+    "    #歷遍每個主題\n",
     "    for k in range(len(data.index.unique())):\n",
     "        sector =  data.index.unique()[k]\n",
     "\n",
@@ -224,49 +281,6 @@
     "    myFile.write('</body>')\n",
     "   \n",
     "    myFile.write('</html>')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 匯出統計資料"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-24T15:38:47.794858Z",
-     "start_time": "2020-05-24T15:38:47.690330Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#按照出處，並遞減排序\n",
-    "result_1 = df.pivot_table(index = '出處', \n",
-    "                       columns = '章',\n",
-    "                       values = '題幹',\n",
-    "                       aggfunc = 'count', \n",
-    "                       fill_value = 0,\n",
-    "                       margins = True,\n",
-    "                       margins_name = '小計',\n",
-    "                       ).sort_index(axis= 0, ascending = False).to_html()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "result_2 = df['概念'].groupby(df['章']).value_counts().to_frame().to_html()\n",
-    "\n",
-    "\n",
-    "with open('統計.html', 'w', encoding = 'utf-8') as file:\n",
-    "    file.write(result_1)\n",
-    "    file.write('<hr>')\n",
-    "    pagebreak_txt = '<p style=\"page-break-after:always\"></p>'\n",
-    "    file.write(pagebreak_txt)\n",
-    "    file.write(result_2)\n",
-    "    file.write('<hr>')\n"
    ]
   },
   {
