--- a/讀取通過率和鑑別度.ipynb
+++ b/讀取通過率和鑑別度.ipynb
@@ -1605,20 +1605,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-111-7e1b7a75e2d3>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-111-7e1b7a75e2d3>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    new_df.to_csv('整理後的通過率與鑑別度.csv', index=False,encoding=\"utf_8_sig\"))\u001b[0m\n\u001b[1;37m                                                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "new_df.to_csv('整理後的通過率與鑑別度.csv', index=False,encoding=\"utf_8_sig\"))  "
+    "new_df.to_csv('整理後的通過率與鑑別度.csv', index=False,encoding=\"utf_8_sig\")"
    ]
   },
   {
