--- a/B03_分析通過率鑑別度與題目.ipynb
+++ b/B03_分析通過率鑑別度與題目.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "major-optics",
+   "id": "stopped-developer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "precise-laundry",
+   "id": "clean-target",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "informal-cherry",
+   "id": "allied-gravity",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "drawn-ceiling",
+   "id": "ultimate-wallet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "developed-likelihood",
+   "id": "noted-islam",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "formed-listing",
+   "id": "alone-private",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "id": "incident-moscow",
+   "id": "tamil-framing",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 260,
-   "id": "greatest-wagner",
+   "id": "sunrise-denial",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 261,
-   "id": "about-helicopter",
+   "id": "illegal-chester",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "harmful-raising",
+   "id": "present-nicholas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,8 +693,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
-   "id": "south-determination",
+   "execution_count": 262,
+   "id": "eastern-bikini",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,8 +704,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
-   "id": "veterinary-accent",
+   "execution_count": 263,
+   "id": "numeric-calendar",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "[1366 rows x 6 columns]"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,8 +885,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
-   "id": "disturbed-latvia",
+   "execution_count": 264,
+   "id": "alpha-designer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +899,7 @@
     "        myFile.write('<html>')\n",
     "        myFile.write('<head>')\n",
     "        myFile.write('<title>')\n",
-    "        myFile.write( subject + kink )\n",
+    "        myFile.write( subject + kind )\n",
     "        myFile.write('</title>')\n",
     "        myFile.write('</head>')\n",
     "\n",
@@ -925,8 +925,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
-   "id": "mexican-couple",
+   "execution_count": 265,
+   "id": "hungarian-style",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "departmental-developer",
+   "id": "valid-present",
    "metadata": {},
    "outputs": [
     {
@@ -2249,7 +2249,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "utility-explanation",
+   "id": "intense-insert",
    "metadata": {},
    "outputs": [
     {
@@ -2403,7 +2403,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "comfortable-greeting",
+   "id": "royal-wellington",
    "metadata": {},
    "outputs": [
     {
@@ -3707,7 +3707,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "medium-mouse",
+   "id": "moving-cookie",
    "metadata": {},
    "outputs": [
     {
@@ -3849,7 +3849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "twenty-adrian",
+   "id": "found-salon",
    "metadata": {},
    "outputs": [],
    "source": []
