--- a/B03_分析通過率鑑別度與題目.ipynb
+++ b/B03_分析通過率鑑別度與題目.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 242,
-   "id": "stopped-developer",
+   "execution_count": 10,
+   "id": "radio-fleece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
-   "id": "clean-target",
+   "execution_count": 11,
+   "id": "burning-brazil",
    "metadata": {},
    "outputs": [
     {
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
-   "id": "allied-gravity",
+   "execution_count": 12,
+   "id": "sweet-search",
    "metadata": {},
    "outputs": [
     {
@@ -75,8 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
-   "id": "ultimate-wallet",
+   "execution_count": 13,
+   "id": "comic-verification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,8 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
-   "id": "noted-islam",
+   "execution_count": 7,
+   "id": "hybrid-central",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "109  54  54  54  54"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,8 +206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
-   "id": "alone-private",
+   "execution_count": 14,
+   "id": "dominican-biology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,8 +235,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "alive-glossary",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passing_df.to_csv('合併後的通過率與鑑別度.csv', index=False,encoding=\"utf_8_sig\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 254,
-   "id": "tamil-framing",
+   "id": "conscious-crystal",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 260,
-   "id": "sunrise-denial",
+   "id": "racial-format",
    "metadata": {},
    "outputs": [
     {
@@ -650,8 +660,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
-   "id": "illegal-chester",
+   "execution_count": 21,
+   "id": "wrapped-niger",
    "metadata": {},
    "outputs": [
     {
@@ -668,8 +678,9 @@
     }
    ],
    "source": [
-    "x = passing_df[passing_df['科目'] == '自然']['通過率']\n",
-    "y = passing_df[passing_df['科目'] == '自然']['鑑別度']\n",
+    "subject = '自然'\n",
+    "x = passing_df[passing_df['科目'] == subject]['通過率']\n",
+    "y = passing_df[passing_df['科目'] == subject]['鑑別度']\n",
     "plt.scatter(x, y)\n",
     "plt.title(\"title\")\n",
     "plt.xlabel(\"passing rate\")\n",
@@ -680,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "present-nicholas",
+   "id": "supreme-craps",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 262,
-   "id": "eastern-bikini",
+   "id": "funded-taste",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "numeric-calendar",
+   "id": "trying-sally",
    "metadata": {},
    "outputs": [
     {
@@ -885,8 +896,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
-   "id": "alpha-designer",
+   "execution_count": 266,
+   "id": "unlimited-breakdown",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,8 +936,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
-   "id": "hungarian-style",
+   "execution_count": 267,
+   "id": "aware-intervention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "valid-present",
+   "id": "acquired-worker",
    "metadata": {},
    "outputs": [
     {
@@ -2249,7 +2260,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "intense-insert",
+   "id": "unknown-antique",
    "metadata": {},
    "outputs": [
     {
@@ -2403,7 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "royal-wellington",
+   "id": "smoking-glass",
    "metadata": {},
    "outputs": [
     {
@@ -3707,7 +3718,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "moving-cookie",
+   "id": "indirect-grocery",
    "metadata": {},
    "outputs": [
     {
@@ -3849,7 +3860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "found-salon",
+   "id": "external-mustang",
    "metadata": {},
    "outputs": [],
    "source": []
