--- a/B04_找生物題庫的通過率和鑑別度.ipynb
+++ b/B04_找生物題庫的通過率和鑑別度.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "sacred-estimate",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('database2.csv', encoding = 'utf_8')\n"
+    "\n"
    ]
   },
   {
@@ -1216,7 +1216,9 @@
    "id": "bottom-integer",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('database2.csv', encoding = 'utf_8')"
+   ]
   }
  ],
  "metadata": {
