--- a/2_question_analyze_and_creater.ipynb
+++ b/2_question_analyze_and_creater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T02:15:00.810923Z",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T02:15:01.362148Z",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T02:15:01.733489Z",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T02:15:03.850945Z",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,18 +354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['序號', '章', '節', '概念', '次概念', '考法', '題組', '題組題幹', '題組圖1', '題組圖2', '題幹', '題幹圖1', '題幹圖2', '選項A', '選項B', '選項C', '選項D', '圖A', '圖B', '圖C', '圖D', '出處', '答案', '原題號', '鑑別度', '通過率', 'group_img1_src',\n",
-       "       'group_img2_src', 'stem_img1_src', 'stem_img2_src', 'a_img_src', 'b_img_src', 'c_img_src', 'd_img_src'],\n",
+       "Index(['序號', '章', '節', '概念', '次概念', '考法', '題組', '題組題幹', '題組圖1', '題組圖2', '題幹',\n",
+       "       '題幹圖1', '題幹圖2', '選項A', '選項B', '選項C', '選項D', '圖A', '圖B', '圖C', '圖D',\n",
+       "       '出處', '答案', '原題號', '鑑別度', '通過率', 'group_img1_src', 'group_img2_src',\n",
+       "       'stem_img1_src', 'stem_img2_src', 'a_img_src', 'b_img_src', 'c_img_src',\n",
+       "       'd_img_src'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
