--- a/2_question_analyze_and_creater.ipynb
+++ b/2_question_analyze_and_creater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 141,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T02:15:00.810923Z",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 142,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T02:15:01.362148Z",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 143,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T02:15:01.733489Z",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 144,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T02:15:03.850945Z",
@@ -150,13 +150,21 @@
     "        global question_txt\n",
     "        question_txt = question_txt + '<img src = \"'\n",
     "        question_txt = question_txt + group_data[ column_name ].values[i]\n",
+    "        \n",
+    "        #如果有設定圖高，則使用設定值\n",
+    "        \n",
+    "        if group_data[ '圖高' ].values[i] != '':\n",
+    "            img_height = group_data[ '圖高' ].values[i]\n",
+    "        else:\n",
+    "            img_height = 100\n",
+    "        \n",
     "        if column_name == 'stem_img1_src' or column_name == 'stem_img2_src':\n",
     "            #question_txt = question_txt + '\" align=\"right\">'\n",
-    "            question_txt = question_txt + '\" height=\"100\" align=\"right\">'\n",
+    "            question_txt = question_txt + '\" height=\"' + str(img_height) + '\" align=\"right\">'\n",
     "            \n",
     "        else:\n",
     "            #question_txt = question_txt + '\"   >'\n",
-    "            question_txt = question_txt + '\" height=\"100\"  >'\n",
+    "            question_txt = question_txt + '\" height=\"' + str(img_height) + '\"  >'\n",
     "\n",
     "with open('生物題庫.html', 'w', encoding='utf-8' ) as myFile:\n",
     "    myFile.write('<html>')\n",
@@ -298,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +319,7 @@
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.width', None)\n",
-    "pd.set_option('display.max_colwidth', -1)\n",
+    "pd.set_option('display.max_colwidth', None)\n",
     "\n",
     "\n",
     "for kind in kinds:\n",
@@ -354,21 +362,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['序號', '章', '節', '概念', '次概念', '考法', '題組', '題組題幹', '題組圖1', '題組圖2', '題幹',\n",
-       "       '題幹圖1', '題幹圖2', '選項A', '選項B', '選項C', '選項D', '圖A', '圖B', '圖C', '圖D',\n",
-       "       '出處', '答案', '原題號', '鑑別度', '通過率', 'group_img1_src', 'group_img2_src',\n",
-       "       'stem_img1_src', 'stem_img2_src', 'a_img_src', 'b_img_src', 'c_img_src',\n",
-       "       'd_img_src'],\n",
+       "Index(['序號', '章', '節', '概念', '次概念', '考法', '題組', '題組題幹', '題組圖1', '題組圖2', '圖高',\n",
+       "       '題幹', '題幹圖1', '題幹圖2', '選項A', '選項B', '選項C', '選項D', '圖A', '圖B', '圖C',\n",
+       "       '圖D', '出處', '答案', '原題號', '鑑別度', '通過率', 'group_img1_src',\n",
+       "       'group_img2_src', 'stem_img1_src', 'stem_img2_src', 'a_img_src',\n",
+       "       'b_img_src', 'c_img_src', 'd_img_src'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,19 +404,6 @@
     "#data.index.is_lexsorted()\n",
     "\n",
     "\n",
-    "#對題幹的圖和選項的圖分別處理\n",
-    "def add_img_src(column_name):\n",
-    "    if len(group_data[ column_name ].values[i] ) > 0:\n",
-    "        global question_txt\n",
-    "        question_txt = question_txt + '<img src = \"'\n",
-    "        question_txt = question_txt + group_data[ column_name ].values[i]\n",
-    "        if column_name == 'stem_img1_src' or column_name == 'stem_img2_src':\n",
-    "            #question_txt = question_txt + '\" align=\"right\">'\n",
-    "            question_txt = question_txt + '\" height=\"100\" align=\"right\">'\n",
-    "            \n",
-    "        else:\n",
-    "            #question_txt = question_txt + '\"   >'\n",
-    "            question_txt = question_txt + '\" height=\"100\"  >'\n",
     "\n",
     "with open('生物題庫_年度.html', 'w', encoding='utf-8' ) as myFile:\n",
     "    myFile.write('<html>')\n",
@@ -586,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 70,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-24T15:05:56.489126Z",
@@ -605,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 71,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-24T15:05:57.632799Z",
@@ -654,7 +649,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29272,6 +29267,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([''], dtype=object)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_data['圖高'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(group_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_data[ '圖高' ].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -29294,7 +29349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
