--- a/2_question_analyze_and_creater.ipynb
+++ b/2_question_analyze_and_creater.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T02:15:00.810923Z",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T02:15:01.362148Z",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T02:15:01.733489Z",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-18T02:15:03.850945Z",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.width', None)\n",
-    "pd.set_option('display.max_colwidth', None)\n",
+    "pd.set_option('display.max_colwidth', -1)\n",
     "\n",
     "\n",
     "for kind in kinds:\n",
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29349,7 +29349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
