--- a/B02_讀取通過率和鑑別度xlsxToCsv.ipynb
+++ b/B02_讀取通過率和鑑別度xlsxToCsv.ipynb
@@ -2,15 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['109通過率', '109鑑別度', '108通過率', '108鑑別度', '107通過率', '107鑑別度', '106通過率', '106鑑別度', '105通過率', '105鑑別度', '104通過率', '104鑑別度', '103通過率', '103鑑別度']\n",
-      "14\n"
+      "['110通過率', '110鑑別度', '109通過率', '109鑑別度', '108通過率', '108鑑別度', '107通過率', '107鑑別度', '106通過率', '106鑑別度', '105通過率', '105鑑別度', '104通過率', '104鑑別度', '103通過率', '103鑑別度']\n",
+      "16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pancala/.local/lib/python3.8/site-packages/openpyxl/styles/stylesheet.py:221: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
      ]
     }
    ],
@@ -28,14 +36,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'109通過率':     題序    國文  英語(閱讀)    數學    社會    自然\n",
+      "{'110通過率':     題序    國文  英語(聽力)  英語(閱讀)    數學    社會    自然\n",
+      "0    1  0.93    0.94    0.77  0.88  0.92  0.81\n",
+      "1    2  0.88    0.86    0.84  0.83  0.88  0.77\n",
+      "2    3  0.82    0.84    0.75  0.79  0.79  0.71\n",
+      "3    4  0.81    0.87    0.86  0.82  0.73  0.81\n",
+      "4    5  0.84    0.79    0.67  0.80  0.79  0.73\n",
+      "..  ..   ...     ...     ...   ...   ...   ...\n",
+      "58  59   NaN     NaN     NaN   NaN  0.43   NaN\n",
+      "59  60   NaN     NaN     NaN   NaN  0.61   NaN\n",
+      "60  61   NaN     NaN     NaN   NaN  0.56   NaN\n",
+      "61  62   NaN     NaN     NaN   NaN  0.82   NaN\n",
+      "62  63   NaN     NaN     NaN   NaN  0.87   NaN\n",
+      "\n",
+      "[63 rows x 7 columns], '110鑑別度':     題序    國文  英語(聽力)  英語(閱讀)    數學    社會    自然\n",
+      "0    1  0.41    0.36    0.61  0.46  0.38  0.33\n",
+      "1    2  0.44    0.54    0.50  0.52  0.45  0.40\n",
+      "2    3  0.46    0.57    0.65  0.60  0.41  0.58\n",
+      "3    4  0.41    0.56    0.50  0.49  0.50  0.48\n",
+      "4    5  0.47    0.64    0.61  0.52  0.41  0.54\n",
+      "..  ..   ...     ...     ...   ...   ...   ...\n",
+      "58  59   NaN     NaN     NaN   NaN  0.38   NaN\n",
+      "59  60   NaN     NaN     NaN   NaN  0.46   NaN\n",
+      "60  61   NaN     NaN     NaN   NaN  0.53   NaN\n",
+      "61  62   NaN     NaN     NaN   NaN  0.45   NaN\n",
+      "62  63   NaN     NaN     NaN   NaN  0.47   NaN\n",
+      "\n",
+      "[63 rows x 7 columns], '109通過率':     題序    國文  英語(閱讀)    數學    社會    自然\n",
       "0    1  0.92    0.82  0.90  0.76  0.88\n",
       "1    2  0.91    0.69  0.90  0.79  0.94\n",
       "2    3  0.95    0.62  0.87  0.73  0.78\n",
@@ -228,16 +262,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pancala/.local/lib/python3.8/site-packages/openpyxl/styles/stylesheet.py:221: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array(['國文', '英語聽力', ' 英語閱讀', '數學', '社會', '自然'], dtype=object)"
+       "array(['國文', '英語(閱讀)', '數學', '社會', '自然'], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,6 +360,7 @@
     "\n",
     "question_list = []\n",
     "for i in range(sheet_counts):\n",
+    "#for i in range(2):\n",
     "    getExcelValue(i)\n",
     "\n",
     "df = pd.DataFrame(question_list , columns = ['年度', '類別','科目','題號','數值'])\n"
@@ -325,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -359,43 +402,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>109</td>\n",
+       "      <td>110</td>\n",
        "      <td>通過率</td>\n",
        "      <td>國文</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.92</td>\n",
+       "      <td>0.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>109</td>\n",
+       "      <td>110</td>\n",
        "      <td>通過率</td>\n",
        "      <td>國文</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.91</td>\n",
+       "      <td>0.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>109</td>\n",
+       "      <td>110</td>\n",
        "      <td>通過率</td>\n",
        "      <td>國文</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.95</td>\n",
+       "      <td>0.82</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>109</td>\n",
+       "      <td>110</td>\n",
        "      <td>通過率</td>\n",
        "      <td>國文</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.91</td>\n",
+       "      <td>0.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>109</td>\n",
+       "      <td>110</td>\n",
        "      <td>通過率</td>\n",
        "      <td>國文</td>\n",
        "      <td>5</td>\n",
-       "      <td>0.90</td>\n",
+       "      <td>0.84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -406,7 +449,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3487</th>\n",
+       "      <th>3993</th>\n",
        "      <td>103</td>\n",
        "      <td>鑑別度</td>\n",
        "      <td>自然</td>\n",
@@ -414,7 +457,7 @@
        "      <td>0.43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3488</th>\n",
+       "      <th>3994</th>\n",
        "      <td>103</td>\n",
        "      <td>鑑別度</td>\n",
        "      <td>自然</td>\n",
@@ -422,7 +465,7 @@
        "      <td>0.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3489</th>\n",
+       "      <th>3995</th>\n",
        "      <td>103</td>\n",
        "      <td>鑑別度</td>\n",
        "      <td>自然</td>\n",
@@ -430,7 +473,7 @@
        "      <td>0.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3490</th>\n",
+       "      <th>3996</th>\n",
        "      <td>103</td>\n",
        "      <td>鑑別度</td>\n",
        "      <td>自然</td>\n",
@@ -438,7 +481,7 @@
        "      <td>0.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3491</th>\n",
+       "      <th>3997</th>\n",
        "      <td>103</td>\n",
        "      <td>鑑別度</td>\n",
        "      <td>自然</td>\n",
@@ -447,27 +490,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3492 rows × 5 columns</p>\n",
+       "<p>3998 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       年度   類別  科目  題號    數值\n",
-       "0     109  通過率  國文   1  0.92\n",
-       "1     109  通過率  國文   2  0.91\n",
-       "2     109  通過率  國文   3  0.95\n",
-       "3     109  通過率  國文   4  0.91\n",
-       "4     109  通過率  國文   5  0.90\n",
+       "0     110  通過率  國文   1  0.93\n",
+       "1     110  通過率  國文   2  0.88\n",
+       "2     110  通過率  國文   3  0.82\n",
+       "3     110  通過率  國文   4  0.81\n",
+       "4     110  通過率  國文   5  0.84\n",
        "...   ...  ...  ..  ..   ...\n",
-       "3487  103  鑑別度  自然  50  0.43\n",
-       "3488  103  鑑別度  自然  51  0.52\n",
-       "3489  103  鑑別度  自然  52  0.49\n",
-       "3490  103  鑑別度  自然  53  0.48\n",
-       "3491  103  鑑別度  自然  54  0.44\n",
+       "3993  103  鑑別度  自然  50  0.43\n",
+       "3994  103  鑑別度  自然  51  0.52\n",
+       "3995  103  鑑別度  自然  52  0.49\n",
+       "3996  103  鑑別度  自然  53  0.48\n",
+       "3997  103  鑑別度  自然  54  0.44\n",
        "\n",
-       "[3492 rows x 5 columns]"
+       "[3998 rows x 5 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,21 +521,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.loc[df['科目'] == '英語(閱讀)', '科目'] = '英語閱讀'\n",
-    "df.loc[df['科目'] == '英語閱讀', '科目'] = '英語'"
+    "df.loc[df['科目'] == '英語閱讀', '科目'] = '英語'\n",
+    "df.loc[df['科目'] == '英語(聽力)', '科目'] = '英語聽力'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('整理後的通過率與鑑別度.csv', index=False,encoding=\"utf_8_sig\")"
+    "df.to_csv('data/整理後的通過率與鑑別度.csv', index=False,encoding=\"utf_8_sig\")"
    ]
   },
   {
@@ -519,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
