--- a/B02_讀取通過率和鑑別度xlsxToCsv.ipynb
+++ b/B02_讀取通過率和鑑別度xlsxToCsv.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['110通過率', '110鑑別度', '109通過率', '109鑑別度', '108通過率', '108鑑別度', '107通過率', '107鑑別度', '106通過率', '106鑑別度', '105通過率', '105鑑別度', '104通過率', '104鑑別度', '103通過率', '103鑑別度']\n",
-      "16\n"
+      "['111通過率', '111鑑別度', '110通過率', '110鑑別度', '109通過率', '109鑑別度', '108通過率', '108鑑別度', '107通過率', '107鑑別度', '106通過率', '106鑑別度', '105通過率', '105鑑別度', '104通過率', '104鑑別度', '103通過率', '103鑑別度']\n",
+      "18\n"
      ]
     },
     {
@@ -36,14 +36,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'110通過率':     題序    國文  英語(聽力)  英語(閱讀)    數學    社會    自然\n",
+      "{'111通過率':     題序    國文  英語(聽力)  英語(閱讀)    數學    社會    自然\n",
+      "0    1  0.88    0.94    0.81  0.87  0.83  0.92\n",
+      "1    2  0.82    0.89    0.77  0.82  0.79  0.88\n",
+      "2    3  0.87    0.82    0.80  0.80  0.75  0.84\n",
+      "3    4  0.85    0.88    0.78  0.78  0.74  0.80\n",
+      "4    5  0.82    0.85    0.71  0.81  0.88  0.69\n",
+      "5    6  0.81    0.77    0.74  0.75  0.81  0.83\n",
+      "6    7  0.77    0.78    0.75  0.69  0.63  0.77\n",
+      "7    8  0.67    0.75    0.64  0.71  0.65  0.77\n",
+      "8    9  0.83    0.67    0.70  0.73  0.91  0.69\n",
+      "9   10  0.71    0.73    0.70  0.64  0.78  0.68\n",
+      "10  11  0.85    0.68    0.64  0.70  0.90  0.73\n",
+      "11  12  0.57    0.81    0.50  0.64  0.79  0.81\n",
+      "12  13  0.61    0.78    0.59  0.56  0.70  0.60\n",
+      "13  14  0.39    0.72    0.52  0.74  0.73  0.71\n",
+      "14  15  0.61    0.59    0.58  0.53  0.62  0.71\n",
+      "15  16  0.58    0.64    0.33  0.55  0.54  0.63\n",
+      "16  17  0.56    0.68    0.49  0.49  0.77  0.68\n",
+      "17  18  0.78    0.57    0.31  0.51  0.42  0.50\n",
+      "18  19  0.50    0.61    0.35  0.50  0.77  0.81\n",
+      "19  20  0.52    0.60    0.52  0.50  0.59  0.69\n",
+      "20  21  0.59    0.45    0.62  0.41  0.70  0.61\n",
+      "21  22  0.44     NaN    0.70  0.40  0.60  0.49\n",
+      "22  23  0.47     NaN    0.65  0.33  0.67  0.58\n",
+      "23  24  0.53     NaN    0.57  0.44  0.57  0.54\n",
+      "24  25  0.50     NaN    0.68  0.42  0.59  0.60\n",
+      "25  26  0.90     NaN    0.57   NaN  0.55  0.39\n",
+      "26  27  0.73     NaN    0.65   NaN  0.48  0.57\n",
+      "27  28  0.82     NaN    0.49   NaN  0.38  0.55\n",
+      "28  29  0.82     NaN    0.66   NaN  0.38  0.51\n",
+      "29  30  0.80     NaN    0.44   NaN  0.40  0.45\n",
+      "30  31  0.73     NaN    0.55   NaN  0.39  0.45\n",
+      "31  32  0.79     NaN    0.52   NaN  0.58  0.48\n",
+      "32  33  0.64     NaN    0.57   NaN  0.69  0.32\n",
+      "33  34  0.79     NaN    0.61   NaN  0.51  0.44\n",
+      "34  35  0.82     NaN    0.58   NaN  0.69  0.42\n",
+      "35  36  0.45     NaN    0.49   NaN  0.52  0.23\n",
+      "36  37  0.69     NaN    0.58   NaN  0.63  0.34\n",
+      "37  38  0.73     NaN    0.56   NaN  0.57  0.31\n",
+      "38  39  0.71     NaN    0.41   NaN  0.66  0.31\n",
+      "39  40  0.43     NaN    0.72   NaN  0.52  0.36\n",
+      "40  41  0.48     NaN    0.76   NaN  0.33  0.35\n",
+      "41  42  0.40     NaN    0.54   NaN  0.52  0.64\n",
+      "42  43   NaN     NaN    0.43   NaN  0.58  0.47\n",
+      "43  44   NaN     NaN     NaN   NaN  0.70  0.57\n",
+      "44  45   NaN     NaN     NaN   NaN  0.62  0.63\n",
+      "45  46   NaN     NaN     NaN   NaN  0.72  0.62\n",
+      "46  47   NaN     NaN     NaN   NaN  0.77  0.62\n",
+      "47  48   NaN     NaN     NaN   NaN  0.74  0.44\n",
+      "48  49   NaN     NaN     NaN   NaN  0.76  0.42\n",
+      "49  50   NaN     NaN     NaN   NaN  0.82  0.67\n",
+      "50  51   NaN     NaN     NaN   NaN  0.86   NaN\n",
+      "51  52   NaN     NaN     NaN   NaN  0.93   NaN\n",
+      "52  53   NaN     NaN     NaN   NaN  0.55   NaN\n",
+      "53  54   NaN     NaN     NaN   NaN  0.70   NaN, '111鑑別度':     題序    國文  英語(聽力)  英語(閱讀)    數學    社會    自然\n",
+      "0    1  0.44    0.39    0.58  0.51  0.48  0.35\n",
+      "1    2  0.46    0.48    0.63  0.55  0.52  0.28\n",
+      "2    3  0.47    0.59    0.61  0.47  0.53  0.45\n",
+      "3    4  0.43    0.55    0.64  0.57  0.56  0.41\n",
+      "4    5  0.58    0.61    0.64  0.58  0.45  0.56\n",
+      "5    6  0.56    0.67    0.69  0.64  0.47  0.37\n",
+      "6    7  0.46    0.70    0.58  0.56  0.52  0.43\n",
+      "7    8  0.59    0.73    0.55  0.61  0.46  0.52\n",
+      "8    9  0.52    0.61    0.69  0.56  0.42  0.49\n",
+      "9   10  0.54    0.70    0.70  0.52  0.46  0.39\n",
+      "10  11  0.50    0.59    0.57  0.56  0.45  0.59\n",
+      "11  12  0.37    0.65    0.41  0.59  0.38  0.54\n",
+      "12  13  0.48    0.69    0.52  0.62  0.47  0.41\n",
+      "13  14  0.39    0.72    0.56  0.56  0.48  0.45\n",
+      "14  15  0.37    0.62    0.59  0.49  0.45  0.54\n",
+      "15  16  0.30    0.66    0.28  0.58  0.42  0.46\n",
+      "16  17  0.46    0.53    0.55  0.58  0.33  0.46\n",
+      "17  18  0.49    0.40    0.24  0.47  0.44  0.60\n",
+      "18  19  0.44    0.66    0.31  0.40  0.47  0.54\n",
+      "19  20  0.48    0.46    0.58  0.43  0.40  0.50\n",
+      "20  21  0.52    0.40    0.69  0.50  0.40  0.57\n",
+      "21  22  0.35     NaN    0.59  0.44  0.55  0.52\n",
+      "22  23  0.43     NaN    0.65  0.44  0.53  0.62\n",
+      "23  24  0.54     NaN    0.56  0.51  0.53  0.41\n",
+      "24  25  0.52     NaN    0.65  0.42  0.47  0.54\n",
+      "25  26  0.43     NaN    0.49   NaN  0.35  0.48\n",
+      "26  27  0.43     NaN    0.65   NaN  0.55  0.52\n",
+      "27  28  0.49     NaN    0.51   NaN  0.29  0.61\n",
+      "28  29  0.58     NaN    0.69   NaN  0.48  0.46\n",
+      "29  30  0.49     NaN    0.53   NaN  0.54  0.33\n",
+      "30  31  0.57     NaN    0.51   NaN  0.39  0.43\n",
+      "31  32  0.53     NaN    0.60   NaN  0.45  0.53\n",
+      "32  33  0.31     NaN    0.62   NaN  0.60  0.38\n",
+      "33  34  0.55     NaN    0.62   NaN  0.53  0.56\n",
+      "34  35  0.57     NaN    0.62   NaN  0.56  0.56\n",
+      "35  36  0.25     NaN    0.55   NaN  0.49  0.18\n",
+      "36  37  0.56     NaN    0.57   NaN  0.55  0.40\n",
+      "37  38  0.56     NaN    0.56   NaN  0.45  0.34\n",
+      "38  39  0.59     NaN    0.43   NaN  0.34  0.41\n",
+      "39  40  0.35     NaN    0.68   NaN  0.36  0.40\n",
+      "40  41  0.44     NaN    0.52   NaN  0.26  0.42\n",
+      "41  42  0.33     NaN    0.64   NaN  0.43  0.44\n",
+      "42  43   NaN     NaN    0.41   NaN  0.43  0.48\n",
+      "43  44   NaN     NaN     NaN   NaN  0.44  0.56\n",
+      "44  45   NaN     NaN     NaN   NaN  0.55  0.55\n",
+      "45  46   NaN     NaN     NaN   NaN  0.52  0.60\n",
+      "46  47   NaN     NaN     NaN   NaN  0.43  0.51\n",
+      "47  48   NaN     NaN     NaN   NaN  0.46  0.56\n",
+      "48  49   NaN     NaN     NaN   NaN  0.47  0.45\n",
+      "49  50   NaN     NaN     NaN   NaN  0.51  0.50\n",
+      "50  51   NaN     NaN     NaN   NaN  0.46   NaN\n",
+      "51  52   NaN     NaN     NaN   NaN  0.41   NaN\n",
+      "52  53   NaN     NaN     NaN   NaN  0.56   NaN\n",
+      "53  54   NaN     NaN     NaN   NaN  0.47   NaN, '110通過率':     題序    國文  英語(聽力)  英語(閱讀)    數學    社會    自然\n",
       "0    1  0.93    0.94    0.77  0.88  0.92  0.81\n",
       "1    2  0.88    0.86    0.84  0.83  0.88  0.77\n",
       "2    3  0.82    0.84    0.75  0.79  0.79  0.71\n",
@@ -262,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -276,10 +384,10 @@
     {
      "data": {
       "text/plain": [
-       "array(['國文', '英語(閱讀)', '數學', '社會', '自然'], dtype=object)"
+       "array(['國文', '英語(聽力)', '英語(閱讀)', '數學', '社會', '自然'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -402,43 +510,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>110</td>\n",
+       "      <td>111</td>\n",
        "      <td>通過率</td>\n",
        "      <td>國文</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>110</td>\n",
-       "      <td>通過率</td>\n",
-       "      <td>國文</td>\n",
-       "      <td>2</td>\n",
        "      <td>0.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>110</td>\n",
+       "      <th>1</th>\n",
+       "      <td>111</td>\n",
        "      <td>通過率</td>\n",
        "      <td>國文</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>0.82</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>111</td>\n",
+       "      <td>通過率</td>\n",
+       "      <td>國文</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>110</td>\n",
+       "      <td>111</td>\n",
        "      <td>通過率</td>\n",
        "      <td>國文</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.81</td>\n",
+       "      <td>0.85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>110</td>\n",
+       "      <td>111</td>\n",
        "      <td>通過率</td>\n",
        "      <td>國文</td>\n",
        "      <td>5</td>\n",
-       "      <td>0.84</td>\n",
+       "      <td>0.82</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -449,7 +557,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3993</th>\n",
+       "      <th>4463</th>\n",
        "      <td>103</td>\n",
        "      <td>鑑別度</td>\n",
        "      <td>自然</td>\n",
@@ -457,7 +565,7 @@
        "      <td>0.43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3994</th>\n",
+       "      <th>4464</th>\n",
        "      <td>103</td>\n",
        "      <td>鑑別度</td>\n",
        "      <td>自然</td>\n",
@@ -465,7 +573,7 @@
        "      <td>0.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3995</th>\n",
+       "      <th>4465</th>\n",
        "      <td>103</td>\n",
        "      <td>鑑別度</td>\n",
        "      <td>自然</td>\n",
@@ -473,7 +581,7 @@
        "      <td>0.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3996</th>\n",
+       "      <th>4466</th>\n",
        "      <td>103</td>\n",
        "      <td>鑑別度</td>\n",
        "      <td>自然</td>\n",
@@ -481,7 +589,7 @@
        "      <td>0.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3997</th>\n",
+       "      <th>4467</th>\n",
        "      <td>103</td>\n",
        "      <td>鑑別度</td>\n",
        "      <td>自然</td>\n",
@@ -490,27 +598,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3998 rows × 5 columns</p>\n",
+       "<p>4468 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       年度   類別  科目  題號    數值\n",
-       "0     110  通過率  國文   1  0.93\n",
-       "1     110  通過率  國文   2  0.88\n",
-       "2     110  通過率  國文   3  0.82\n",
-       "3     110  通過率  國文   4  0.81\n",
-       "4     110  通過率  國文   5  0.84\n",
+       "0     111  通過率  國文   1  0.88\n",
+       "1     111  通過率  國文   2  0.82\n",
+       "2     111  通過率  國文   3  0.87\n",
+       "3     111  通過率  國文   4  0.85\n",
+       "4     111  通過率  國文   5  0.82\n",
        "...   ...  ...  ..  ..   ...\n",
-       "3993  103  鑑別度  自然  50  0.43\n",
-       "3994  103  鑑別度  自然  51  0.52\n",
-       "3995  103  鑑別度  自然  52  0.49\n",
-       "3996  103  鑑別度  自然  53  0.48\n",
-       "3997  103  鑑別度  自然  54  0.44\n",
+       "4463  103  鑑別度  自然  50  0.43\n",
+       "4464  103  鑑別度  自然  51  0.52\n",
+       "4465  103  鑑別度  自然  52  0.49\n",
+       "4466  103  鑑別度  自然  53  0.48\n",
+       "4467  103  鑑別度  自然  54  0.44\n",
        "\n",
-       "[3998 rows x 5 columns]"
+       "[4468 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
